--- a/www/v4/Administration.html
+++ b/www/v4/Administration.html
@@ -25,13 +25,16 @@
 			position: relative;
 			float: left;
 			list-style: none;
-			padding: 2px 5px 7px;
+			padding: 2px 5px 6px;
 			margin-right: 5px;
 			border: 1px solid Black;
 			cursor: pointer;
-			background-color: #EEEEEE;
-			color: Black;
+			background-color: rgb(136,206,98);
+			color: white;
 			z-index: 1;
+			border-bottom: none;
+			border-top-left-radius: 15px;
+			border-top-right-radius: 15px;
 		}
 			#onglets .actif{
 			border-bottom: none;
@@ -43,10 +46,9 @@
 			position: relative;
 			margin: 0 20px;
 			padding: 10px;
-			border: 5px solid Black;
+			border: 3px solid Black;
 			z-index: 5;
-			top: -6px;
-			background-color: #EEEEEE;
+			top: -3px;
 			color: Black;
 			width: calc(100% - 45px);
 			overflow: hidden;
@@ -91,7 +93,7 @@
 			<div class="collapse navbar-collapse navbar-left" id="menu">
 				<ul class="nav navbar-nav text-center">
 					<li><a href="accueil.html"><img class="imgButton" src="images/home.png"></a>Accueil</li>
-					<li><a href="figurines.html"><img class="imgButton" src="images/anime.png"></a>Figurines</li>
+					<li><a href="figurines.html"><img class="imgButton" src="images/figurine.png"></a>Figurines</li>
 					<li><a href="contact.html"><img class="imgButton" src="images/contact.png"></a>Contact</li>
 					<li><a href="compte.html"><img class="imgButton" src="images/compte.png"></a>Compte</li>
 					<li><a href="panier.html"><img class="imgButton" src="images/panier.png"></a>Panier</li>
@@ -104,192 +106,201 @@
 <!-- contenu de la page -->
 	<div class="container">
 <!-- titre d'en tete -->
-	<div class="row">
-		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-			<h1>Administration</h1>
-			<div class="col-xs-12"><hr></div>
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+				<h1>Administration</h1>
+				<div class="col-xs-12"><hr></div>
+			</div>
 		</div>
-	</div>
+		
+		<h1>Gestion des produits</h1>
+		<ul id="onglets">
+			<li class="actif">Ajouter un element</li>
+			<li>Modifier un element</li>
+			<li>Supprimer un element</li>
+		</ul>
 	
-	<h1>Gestion des produits</h1>
-	<ul id="onglets">
-		<li class="actif">Ajouter un element</li>
-		<li>Modifier un element</li>
-		<li>Supprimer un element</li>
-	</ul>
-	
-	<div id="contenu">
-		<div class="item">
-			<div class="row centered-form">
-				<div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h3 class="panel-title">Ajouter un element.</h3>
+		<div id="contenu">
+			<div class="item">
+				<div class="row centered-form">
+					<div class="col-xs-12 col-sm-4 col-md-4  col-md-offset-2">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h3 class="panel-title">Ajouter un element.</h3>
+							</div>
+							<div class="panel-body">
+								<form role="form" method="post" action="php/ajoutElement.php">
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<input type="text" name="Reference"  class="form-control input-sm" placeholder="Reference">
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<input type="text" name="Libelle" class="form-control input-sm" placeholder="Libelle">
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<input type="text" name="Description"  class="form-control input-sm" placeholder="Description">
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<input type="text" name="Prix"  class="form-control input-sm" placeholder="Prix">
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<input type="text" name="Univers"  class="form-control input-sm" placeholder="Univers">							
+										</div>
+									</div>
+									<input type="submit" value="Ajouter" class="btn btn-block">   	
+								</form>						
+							</div>
 						</div>
-						<div class="panel-body">
-							<form role="form" method="post" action="ajoutElement.php">
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Reference"  class="form-control input-sm" placeholder="Reference">
+					</div>
+					<div class="col-xs-12 col-sm-4 col-md-4">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h3 class="panel-title">Ajouter un univers.</h3>
+							</div>
+							<div class="panel-body">
+								<form role="form" method="post" action="php/ajoutUnivers.php">
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<input type="text" name="Univers"  class="form-control input-sm" placeholder="Univers">							
+										</div>
 									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Libelle" class="form-control input-sm" placeholder="Libelle">
+									<div class="col-xs-6 col-sm-6 col-md-6">
+										<div class="form-group">
+											<input type="checkbox" name="Categ1" value="Jeux vidéos"> Jeux vidéos
+										</div>
 									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Description"  class="form-control input-sm" placeholder="Description">
+									<div class="col-xs-6 col-sm-6 col-md-6">
+										<div class="form-group">
+											<input type="checkbox" name="Categ2" value="Séries"> Séries
+										</div>
 									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Prix"  class="form-control input-sm" placeholder="Prix">
+									<div class="col-xs-6 col-sm-6 col-md-6">
+										<div class="form-group">
+											<input type="checkbox" name="Categ3" value="Films"> Films
+										</div>
 									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Univers"  class="form-control input-sm" placeholder="Univers">							
+									<div class="col-xs-6 col-sm-6 col-md-6">
+										<div class="form-group">
+											<input type="checkbox" name="Categ4" value="Animés"> Animés
+										</div>
 									</div>
-								</div>
-								<div class="col-xs-6 col-sm-6 col-md-6">
-									<div class="form-group">
-										<input type="checkbox" name="Categ1" value="Jeux vidéos"> Jeux vidéos
-									</div>
-								</div>
-								<div class="col-xs-6 col-sm-6 col-md-6">
-									<div class="form-group">
-										<input type="checkbox" name="Categ2" value="Séries"> Séries
-									</div>
-								</div>
-								<div class="col-xs-6 col-sm-6 col-md-6">
-									<div class="form-group">
-										<input type="checkbox" name="Categ3" value="Films"> Films
-									</div>
-								</div>
-								<div class="col-xs-6 col-sm-6 col-md-6">
-									<div class="form-group">
-										<input type="checkbox" name="Categ4" value="Animés"> Animés
-									</div>
-								</div>
-								<input type="submit" value="Ajouter" class="btn btn-info btn-block">   	
-							</form>						
+									<input type="submit" value="Ajouter" class="btn btn-block">   	
+								</form>						
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<div class="item">
+				<div class="row centered-form">
+					<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h3 class="panel-title">Modifier un element.</h3>
+							</div>
+							<div class="panel-body">
+								<form role="form">
+									<div class="col-xs-7 col-sm-7 col-md-7">
+										<div class="form-group" method="post" action="php/modifElement.php">
+											<input type="text" name="Reference"  class="form-control input-sm" placeholder="Reference">
+										</div>
+									</div>
+									<div class="col-xs-5 col-sm-5 col-md-5">
+										<div class="form-group">
+											<input type="submit" value="Chercher" class="btn btn-block"> 
+										</div>
+									</div>
+								</form>
+							</div>
+							<div class="panel-body">
+								<form role="form">
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group" method="post" action="php/modifElement2.php">
+											<input type="text" name="Libelle"  class="form-control input-sm" placeholder="Libelle"  value=<?php echo $donnees['libelleArticle']; ?>>
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<?php echo '<input type="text" name="Description"  class="form-control input-sm" placeholder="Description" value="'.$donnees["descriptifArticle"].'">' ?>
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<input type="text" name="Prix"  class="form-control input-sm" placeholder="Prix" value=<?php echo $donnees['prixArticle']; ?>>
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<input type="text" name="Univers"  class="form-control input-sm" placeholder="Univers" value=<?php echo $donnees['universArticle']; ?>>
+										</div>
+									</div>
+									<div class="col-xs-6 col-sm-6 col-md-6">
+										<div class="form-group">
+											<input type="checkbox" name="Categ1" value="Jeux vidéos"> Jeux vidéos
+										</div>
+									</div>
+									<div class="col-xs-6 col-sm-6 col-md-6">
+										<div class="form-group">
+											<input type="checkbox" name="Categ2" value="Séries"> Séries
+										</div>
+									</div>
+									<div class="col-xs-6 col-sm-6 col-md-6">
+										<div class="form-group">
+											<input type="checkbox" name="Categ3" value="Films"> Films
+										</div>
+									</div>
+									<div class="col-xs-6 col-sm-6 col-md-6">
+										<div class="form-group">
+											<input type="checkbox" name="Categ4" value="Animés"> Animés
+										</div>
+									</div> 
+									<input type="submit" value="Modifier" class="btn btn-block">   		
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="row centered-form">
+					<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h3 class="panel-title">Supprimer un element.</h3>
+							</div>
+							<div class="panel-body">
+								<form role="form" method="post" action="php/supprimElement.php">
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<input type="text" name="Reference"  class="form-control input-sm" placeholder="Reference">
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<input type="text" name="Libelle"  class="form-control input-sm" placeholder="Libelle">
+										</div>
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+										<div class="form-group">
+											<input type="text" name="Univers"  class="form-control input-sm" placeholder="Univers">
+										</div>
+									</div>
+									<input type="submit" value="Supprimer" class="btn btn-block">   		
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>		
 		</div>
-		<div class="item">
-			<div class="row centered-form">
-				<div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h3 class="panel-title">Modifier un element.</h3>
-						</div>
-						<div class="panel-body">
-							<form role="form">
-								<div class="col-xs-7 col-sm-7 col-md-7">
-									<div class="form-group" method="post" action="modifElement.php">
-										<input type="text" name="Reference"  class="form-control input-sm" placeholder="Reference">
-									</div>
-								</div>
-								<div class="col-xs-5 col-sm-5 col-md-5">
-									<div class="form-group">
-										<input type="submit" value="Chercher" class="btn btn-info btn-block"> 
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Libelle"  class="form-control input-sm" placeholder="Libelle">
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Description"  class="form-control input-sm" placeholder="Description">
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Prix"  class="form-control input-sm" placeholder="Prix">
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Univers"  class="form-control input-sm" placeholder="Univers">
-									</div>
-								</div>
-								<div class="col-xs-6 col-sm-6 col-md-6">
-									<div class="form-group">
-										<input type="checkbox" name="Categ1" value="Jeux vidéos"> Jeux vidéos
-									</div>
-								</div>
-								<div class="col-xs-6 col-sm-6 col-md-6">
-									<div class="form-group">
-										<input type="checkbox" name="Categ2" value="Séries"> Séries
-									</div>
-								</div>
-								<div class="col-xs-6 col-sm-6 col-md-6">
-									<div class="form-group">
-										<input type="checkbox" name="Categ3" value="Films"> Films
-									</div>
-								</div>
-								<div class="col-xs-6 col-sm-6 col-md-6">
-									<div class="form-group">
-										<input type="checkbox" name="Categ4" value="Animés"> Animés
-									</div>
-								</div> 
-					
-								<input type="submit" value="Modifier" class="btn btn-info btn-block">   		
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="item">
-			<div class="row centered-form">
-				<div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h3 class="panel-title">Supprimer un element.</h3>
-						</div>
-						<div class="panel-body">
-							<form role="form" method="post" action="supprimElement.php">
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Reference"  class="form-control input-sm" placeholder="Reference">
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Libelle"  class="form-control input-sm" placeholder="Libelle">
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Description"  class="form-control input-sm" placeholder="Description">
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Prix"  class="form-control input-sm" placeholder="Prix">
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-12 col-md-12">
-									<div class="form-group">
-										<input type="text" name="Univers"  class="form-control input-sm" placeholder="Univers">
-									</div>
-								</div>
-					
-								<input type="submit" value="Supprimer" class="btn btn-info btn-block">   		
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>		
-	</div>
 	</div>
 <!-- fin contenu de la page -->
 </body>
