--- a/www/v4/Accueil.html
+++ b/www/v4/Accueil.html
@@ -26,30 +26,30 @@
 <body>
 
 <!-- barre de navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top menu">
+<nav class="navbar navbar-default navbar-fixed-top menu">
         <div class="container-fluid">
-
             <div class="nav-header">
                 <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" name="button">
                     <img class="imgButton" src="images/iconeupop.png">
                 </button>
             </div>
 
-            <div class="collapse navbar-collapse navbar-left" id="menu">
-                <ul class="nav navbar-nav text-center">
+            <div class="collapse navbar-collapse" id="menu">
+                <ul class="nav navbar-nav">
                     <li><img class="logoBar" src="images/iconeupop.png"></li>
                     <li><a href="accueil.html" ><img class="imgButton" src="images/home.png"></a></li>
                     <li><a href="figurines.html"><img class="imgButton" src="images/figurine.png"></a></li>
                     <!-- <li><h2 id="titre">Accueil</h2></li> -->
                     <li><a href="contact.html"><img class="imgButton" src="images/contact.png"></a></li>
-                    <li><a href="compte.html"><img class="imgButton" src="images/compte.png"></a></li>
+                    <li><a href="compte.php"><img class="imgButton" src="images/compte.png"></a></li>
                     <li><a href="panier.html"><img class="imgButton" src="images/panier.png"></a></li>
-                    <li><a href="index.html"><img class="imgButton" src="images/compte.png"></a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html"><img class="imgButton" src="images/deco.png"></a></li>
                 </ul>
             </div>
         </div>
     </nav>
-<!-- fin barre de navigation -->
 
 
 <!-- contenu de la page -->
@@ -60,9 +60,10 @@
 		
     <div class="container mt-4 mb-5">
 	
-		<!-- debut vidéo responsive -->
+<!-- debut vidéo responsive -->
 		<div class="video-container">
-		<iframe src="https://www.youtube.com/embed/-K7xC2DiG7w" frameborder="0"></iframe> 
+            <!-- <iframe src="videos/StrangerThings2pops.mp4" frameborder="0"></iframe> -->
+            <video src="videos/coming soon sonic pops.mp4" type="video/mp4" autoplay loop >Prochainement</video>
 		</div>
     </div>
 </div>	
