--- a/www/v4/Index.html
+++ b/www/v4/Index.html
@@ -2,26 +2,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3c.org/TR/xhtml1/DTD/xtmlhtml1-strict.dtd">
 
-
-
 <html>
-	<head>
-
-		<meta charset='utf-8'>
+<!-- Header -->
+<head>
+	<meta charset='utf-8'>
 	<link rel="icon" type="image/png" href="Images\iconeupop.png"/>
-
-<!-- feuilles de style -->
+	<!-- feuilles de style -->
 	<link rel="stylesheet" href="./css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./css/main.css"/>
-   	<link rel="stylesheet" href="./css/index.css">
-
-<!-- fichiers javascript -->
-    <script type="application/javascript" src="./js/jquery-3.2.1.min.js"></script>
-    <script type="application/javascript" src="./js/bootstrap.min.js"></script>
-
+	<link rel="stylesheet" href="./css/main.css"/>
+	<link rel="stylesheet" href="./css/index.css"/>
+	<!-- fichiers javascript -->
+	<script type="application/javascript" src="./js/jquery-3.2.1.min.js"></script>
+	<script type="application/javascript" src="./js/bootstrap.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>U'POP</title>
-	</head>
+	<title>Bienvenue sur U'POP</title>
+</head>
 
 <!-- corps de texte -->
 	<body>
@@ -30,6 +25,7 @@
 			<div id="connexion" class="row centered-form">
 				<div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
 					<form class="form-login" method="post" action="php/connexion.php"><!-- appel du php de connexion -->
+						<img src="images/iconeupop.png" width="400px" class="img-responsive center-block"/>
 						<h4>Bienvenue sur U'POP</h4>
 						<input type="text" id="loginUser" name="loginUser" class="form-control input-sm chat-input" placeholder="Pseudo" />
 						</br>
@@ -142,5 +138,6 @@
         $("#inscription").hide(400);
         $("#connexion").show(400);
     }
+	
 	</script>
 </html>
